# homework_04

./: .gitignore  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml  test.db  test_main.py
