[tool.poetry]
name = "homework-04"
version = "0.1.0"
description = ""
authors = ["iooVM <mihail@shirshakov.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.9"
sqlalchemy = ">=1.4"
aiosqlite = "^0.20.0"
uvicorn = "^0.32.1"
fastapi = "^0.115.6"
pytest = "^8.3.4"
httpx = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
